# cashtracker

./: .gitignore  README.md  categories.example.yaml  idea.md  pyproject.toml
.github/: copilot-instructions.md
src/cashtracker/: __init__.py  categorizer.py  cli.py  config.py  models.py  output.py
src/cashtracker/parsers/: base.py  credit_card_text.py  generic_csv.py  registry.py
src/cashtracker/readers/: csv_reader.py  pdf_reader.py
tests/: conftest.py  test_categorizer.py  test_cli.py  test_config.py  test_credit_card_parser.py  test_csv_reader.py  test_models.py  test_output.py  test_parsers.py
