[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cashtracker"
version = "0.1.0"
description = "Local-only bank statement parser and transaction categorizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pdfplumber>=0.10",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
cashtracker = "cashtracker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
